// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Examples / Button Basic 1`] = `
<button
  type="button"
>
   
  Click me
</button>
`;

exports[`Storyshots Examples / Button CSF 2 Story With Play 1`] = `
<button
  type="button"
>
   
  Hello
</button>
`;

exports[`Storyshots Examples / Button Process Env 1`] = `
<button
  type="button"
>
   
  Hello
</button>
`;

exports[`Storyshots Examples / Button Story No Render 1`] = `
<button
  type="button"
>
   
  magic!
</button>
`;

exports[`Storyshots Examples / Button Story Object 1`] = `"hahaha"`;

exports[`Storyshots Examples / Button Story With Play 1`] = `
<button
  type="button"
>
   
  play
</button>
`;

exports[`Storyshots Examples / Button With Args 1`] = `
<button
  type="button"
>
   
  With args
</button>
`;
